@@ -129,6 +129,7 @@ ORDINARY_PROGS=	\
 	type_spec_ho_term \
 	type_spec_modes \
 	type_to_term_bug \
+	unify_expression \
 	unused_float_box_test \
 	user_defined_equality2 \
 	write \
